{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Touch",
            "id": "693d5ce0-2027-44d3-b41e-5b11f41b8f5b",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "ff18f7cc-dd9c-4e5d-8194-f61f0456f944",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "30bd2255-23af-43eb-a8ef-9ece4cc877d4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d71e4852-68c5-4e2d-8988-1667e498e604",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "245b2a01-4079-45a7-9d3a-94177a08d7aa",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "ControlsMovil",
            "bindingGroup": "ControlsMovil",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}